Kevin user story two

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,9 @@
 <img style= 'border: 10px dotted red;' src='http://f.cl.ly/items/0k0v3e2X3l2f3i1n1Y19/Screen%20Shot%202013-09-10%20at%2011.32.00.png'>
+<h1> My name is Kevin. No actually it's <%= @name %>  </h1>
+
+<div align="center">
+  Help me.
+</div>
 
 <!-- <p>You can edit the CSS below to experiment with border styles!</p> -->
 <!-- <div class=fun-border> sdfghj  </div> -->
