--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,11 @@
 <img style= 'border: 10px dotted red;' src='http://f.cl.ly/items/0k0v3e2X3l2f3i1n1Y19/Screen%20Shot%202013-09-10%20at%2011.32.00.png'>
 <h1> My name is Kevin. No actually it's <%= @name %>  </h1>
 
+<form>
+  <input type="text" name="name" placeholder="Enter a name for your cat">
+  <input type="submit" value="Blastoise">
+</form>
+
 <div align="center">
   Help me.
 </div>
