--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,42 @@
-<img style= 'border: 10px dotted red;' src='http://f.cl.ly/items/0k0v3e2X3l2f3i1n1Y19/Screen%20Shot%202013-09-10%20at%2011.32.00.png'>
-<h1> My name is Kevin. No actually it's <%= @name %>  </h1>
+  <img style= 'border: 10px dotted red;' src='http://f.cl.ly/items/0k0v3e2X3l2f3i1n1Y19/Screen%20Shot%202013-09-10%20at%2011.32.00.png'>
+  <h1> My name is Kevin. No actually it's <%= @name %>  </h1>
 
-<form>
-  <input type="text" name="name" placeholder="Enter a name for your cat">
-  <input type="submit" value="Blastoise">
-</form>
+  <h1> <%= @worry %>  </h1>
 
-<div align="center">
+  <form>
+    <%if @name==nil %>
+
+    <input type="text" name="name" placeholder="Enter a name for your cat">
+    <input type="submit" value="Blastoise">
+
+    <% else %>
+
+  <br>
+    <br>
+  <div align="right">
+    <input type="text" name= "bafflement" placeholder="tell me my fears">
+    <input type= "submit" value ="seesaw">
+  </div>
+
+  </form>
+
+
+    <% end %>
+    
+
+  <!-- <%if @worry!=nil %> -->
+
+
+
+
+<!-- <form>
+  <input type="text" name= "bafflement" placeholder="tell me your worries">
+  <input type= "submit" value ="seesaw">
+</form> -->
+
+<!-- <div align="center">
   Help me.
-</div>
+</div> -->
 
 <!-- <p>You can edit the CSS below to experiment with border styles!</p> -->
 <!-- <div class=fun-border> sdfghj  </div> -->
